syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.smartface.keycloak.grpc";
option java_outer_classname = "EventProto";

package event;

service EventService {
  rpc SendEvent (EventRequest) returns (EventResponse) {}
  rpc StreamEvents (EventFilter) returns (stream EventResponse) {}
}

message EventRequest {
  string event_id = 1;
  string event_type = 2;
  string realm_id = 3;
  string client_id = 4;
  string user_id = 5;
  string session_id = 6;
  string ip_address = 7;
  int64 timestamp = 8;
  string error = 9;
  map<string, string> details = 10;
}

message EventResponse {
  string event_id = 1;
  string status = 2;
  string message = 3;
}

message EventFilter {
  string realm_id = 1;
  string client_id = 2;
  string user_id = 3;
  string event_type = 4;
  int64 from_timestamp = 5;
  int64 to_timestamp = 6;
} 